--- a/src/sections/MuserUI/MuserUI.less
+++ b/src/sections/MuserUI/MuserUI.less
@@ -59,6 +59,8 @@
     left: 0;
     line-height: 1.3em;
     padding: 1em;
+    width: 100%;
+    box-sizing: border-box;
   }
 
   .ui-wrapper {
